@@ -1,3 +1,7 @@
+2005-01-12  Sam Steingold  <sds@gnu.org>
+
+	* makemake.in (BASE_MODULES): added syscalls and regexp
+
 2005-01-09  Bruno Haible  <bruno@clisp.org>
 
 	Put the i18n module into the 'base' linking set. Needed for all kinds
